tests/workflow/negative/reachability.s
// `a` not reachable from start
@a
go1() { transitionTo(@terminal) }

